# PresenterHelper

./: CMakeLists.txt  ConfigDialog.cpp  ConfigDialog.h  ConfigDialog.ui  Copyright.txt  GestureThread.cpp  GestureThread.h  PresenterHelper.cpp  PresenterHelper.h  README.md  icons.qrc  main.cpp
